register and login added

--- a/views/create.edge
+++ b/views/create.edge
@@ -28,7 +28,7 @@
             <label>Title</label>
           </div>
           <div class="form-floating">
-            <input type="text" class="form-control" name="description" placeholder="Enter Your DEscription...">
+            <input type="text" class="form-control" name="description" placeholder="Enter Your Description...">
             <label>Description</label>
           </div>
           <div class="form-floating">
