logout added and optimized codes

--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -27,8 +27,12 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/posts/new">Create Post</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/reg">Register</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/log">Login</a></li>
+                        @if(!auth)
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/reg">Register</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Log in</a></li>
+                        @else
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/logout">Log out</a></li>
+                        @endif
                     </ul>
                 </div>
             </div>
