--- a/views/register.edge
+++ b/views/register.edge
@@ -14,21 +14,27 @@
     </div>
 </header>
 
-
 <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
+        @if(errors.length > 0)
+          <ul class="list-group my-3">
+            @each(err in errors)
+              <li class="list-group-item text-danger">{{err}}</li>
+            @endeach
+          </ul>
+        @endif
         <form action="/auth/reg" method="POST" >
           <div class="form-floating">
-            <input type="text" class="form-control" name="username" placeholder="Enter Your Title...">
+            <input type="text" class="form-control" name="username" value="{{data.username || ""}}" placeholder="Enter Your Title...">
             <label>Username</label>
           </div>
           <div class="form-floating">
-            <input type="email" class="form-control" name="email" placeholder="Enter Your Email...">
+            <input type="email" class="form-control" name="email" value="{{data.email || ""}}" placeholder="Enter Your Email...">
             <label>Email</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" name="password" placeholder="Enter Your Password...">
+            <input type="password" class="form-control" name="password" value="{{data.password || ""}}" placeholder="Enter Your Password...">
             <label>Password</label>
           </div>
           <div class="form-group text-center my-4">
