--- a/views/index.edge
+++ b/views/index.edge
@@ -18,7 +18,7 @@
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">   
-            @each(post in posts)
+            @each(post in posts.reverse())
             <!-- Post preview-->
             <div class="post-preview">
                 <a href="/post/{{post._id}}">
@@ -27,7 +27,7 @@
                 </a>
                 <p class="post-meta">
                     Posted by
-                    <a href="#!">{{post.username}}</a>
+                    <a href="#!" class="text-capitalize" >{{post.author.username}}</a>
                     {{post.createAt.toDateString()}}
                 </p>
             </div>
