--- a/views/post.edge
+++ b/views/post.edge
@@ -11,7 +11,7 @@
                     <h2 class="subheading">{{post.description}}</h2>
                     <span class="meta">
                         Posted by
-                        <a href="#!">{{post.username}}</a>
+                        <a href="#!" class="text-capitalize" >{{post.author.username}}</a>
                         {{post.createAt.toDateString()}}
                     </span>
                 </div>
@@ -25,7 +25,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <h2 class="section-heading">{{post.title}}</h2>
-                <p>{{post.content}}</p>
+                <p>{{{post.content}}}</p>
             </div>
         </div>
     </div>
