--- a/views/login.edge
+++ b/views/login.edge
@@ -25,11 +25,11 @@
         @endif
         <form action="/auth/log" method="POST" >
           <div class="form-floating">
-            <input type="email" class="form-control" name="email" placeholder="Enter Your Email...">
+            <input type="email" class="form-control" name="email" value="{{data.email || ''}}" placeholder="Enter Your Email...">
             <label>Email</label>
           </div>
           <div class="form-floating">
-            <input type="password" class="form-control" name="password" placeholder="Enter Your Password...">
+            <input type="password" class="form-control" name="password" value="{{data.password || ''}}" placeholder="Enter Your Password...">
             <label>Password</label>
           </div>
           <div class="form-group text-center my-4">
